--- a/Battleship-AR/Packages/manifest.json
+++ b/Battleship-AR/Packages/manifest.json
@@ -1,5 +1,5 @@
 {
-    "dependencies": {
+  "dependencies": {
     "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-11.0.4.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
@@ -17,6 +17,7 @@
     "com.unity.multiplayer.tools": "2.2.3",
     "com.unity.netcode.gameobjects": "2.2.0",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.services.multiplayer": "1.1.1",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
